--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -24,8 +24,5 @@ jobs:
         with: 
           args: build
 
-      - name: Run Trivy vulnerability scanner
-        uses: hypertrace/github-actions/trivy-image-scan@main
-        with:
-          image: hypertrace/config-service
-          output-mode: github
+      - name: Dependency Check
+        run: ./gradlew dependencyCheckAggregate
