--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -8,6 +8,20 @@ on:
   pull_request:
 
 jobs:
+  build:
+    runs-on: ubuntu-22.04
+    steps:
+      # Set fetch-depth: 0 to fetch commit history and tags for use in version calculation
+      - name: Check out code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Build
+        uses: hypertrace/github-actions/gradle@main
+        with:
+          args: build
+
   test:
     runs-on: ubuntu-22.04
     steps:
@@ -23,11 +37,12 @@ jobs:
           args: build jacocoTestReport
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           name: unit test reports
           fail_ci_if_error: true
           flags: unit
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: copy test reports
         uses: hypertrace/github-actions/gradle@main
@@ -36,7 +51,7 @@ jobs:
           args: copyAllReports --output-dir=/tmp/test-reports
 
       - name: Archive test reports
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v4
         with:
           name: test-reports
           path: /tmp/test-reports
