--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,4 @@
 # Each line is a file pattern followed by one or more owners.
 
 # global
-* @kotharironak @tim-mwangi @surajpuvvada @avinashkolluru
-
-# GH action
-.github/ @aaron-steinfeld @jbahire @kotharironak @buchi-busireddy
+* @hypertrace/data-platform-owners
